BuildingDTO -> CreatorID change CreatorDTO, getUserData db function added
